# mobile-gl-rs

./: README.md
android/: .gitignore  build.gradle  crash-inspect.sh  inl
android/app/: build.gradle
android/app/src/main/jni/glass-activity/: activity.cpp  activity.h
android/dev/: build.sh
android/gradle/wrapper/: gradle-wrapper.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/jni/glass-activity/: activity.cpp
app/src/main/res/values/: strings.xml
dev/: build.sh
inl/: Cargo.toml  build.rs
inl/src/: lib.rs
inl/src/android/: gl_triangle.frag  gl_triangle.vert  mod.rs
inl/src/c_api/: mod.rs
inl/src/dropi/: error.rs  mod.rs
inl/src/dropi/ffi/: jni.rs  mod.rs
inl/src/dropi/ffi/android/: asset_manager.rs  input.rs  log.rs  looper.rs  mod.rs  native_activity.rs  native_window.rs  rect.rs  window.rs
inl/src/dropi/glue/: mod.rs
inl/src/egli/: mod.rs
inl/tools/: android-bindgen.sh
ios/trafi-inspector/: AppDelegate.swift  ViewController.swift  build-rust-library.sh  trafi-inspector-Bridging-Header.h
ios/trafi-inspector.xcodeproj/: project.pbxproj
ios/trafi-inspector.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios/trafi-inspector.xcodeproj/xcshareddata/xcschemes/: trafi-inspector.xcscheme
ios/trafi-inspector/Base.lproj/: Main.storyboard
ios/trafi-inspector/Shaders/: Shader.fsh  Shader.vsh
