[package]
name = "inl"
version = "0.1.0"
authors = ["Nerijus Arlauskas <nercury@gmail.com>"]

[lib]
name = "inl"
crate-type = ["staticlib"]

[dependencies]
libc = "0.2"
log = "0.3"
android_logger = "0.2"
android_looper = "0.1"
android_looper-sys = "0.1"

[dependencies.egli]
path = "../../egli-rs"

[dependencies.android_sensor]
path = "../../android_sensor"
